Upgrade to Docusaurus v3.3.2.
Docusaurus Core updated to v3.3.2.

Docusaurus Plugin Client Redirects updated to v3.3.2.

Docusaurus Preset Classic updated to v3.3.2.

React MDX-JS updated to v3.0.0.

Prism React Renderer updated to v2.1.0.

React updated to v18.2.

React Player updated to v2.16.0.

Docusaurus Module Type Aliases updated to v3.3.2.

Docusaurus Types updated to v3.3.2.

Node.js updated to v18.0.

Fixed various links and arguments that broke or threw warnings during the upgrade to v3.

--- a/blog/2023-07-27-poiyomi-toon-vcc/2023-07-27-poiyomi-toon-vcc.mdx
+++ b/blog/2023-07-27-poiyomi-toon-vcc/2023-07-27-poiyomi-toon-vcc.mdx
@@ -4,7 +4,7 @@ title: "Poiyomi Toon Shader Now Available via VCC"
 description: Tutorial on how to add Poiyomi Toon Shader using VCC.
 hide_table_of_contents: true
 authors: poiyomi
-tags: [shader, vrchat, major]
+keywords: [shader, vrchat, major]
 ---
 *2024-06-01: Updated with new links*
 
